<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">
    <LinearLayout
        android:id="@+id/appBar"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        style="@style/AppBar"
        android:orientation="horizontal">
        <ImageButton
            android:background="@drawable/btn_circle"
            android:scaleType="fitStart"
            android:layout_margin="10dp"
            android:src="@drawable/left_arrow_ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_margin="10dp"
            android:id="@+id/tvNamaBarang"
            android:textColor="@color/whiteColor"
            android:text="@string/nama_barang"
            android:textSize="10pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <ScrollView
        android:layout_below="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imgBarang"
                android:scaleType="centerCrop"
                android:src="@drawable/img_default"
                android:layout_width="wrap_content"
                android:layout_height="240dp" />
            <ImageView
                android:id="@+id/imgIcon"
                android:layout_marginTop="160dp"
                android:background="@color/colorPrimary"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ico_hijab"
                android:layout_width="150dp"
                android:layout_height="150dp" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_below="@+id/imgIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/colorAccent"
                    android:textSize="15pt"
                    android:layout_margin="10dp"
                    android:id="@+id/tvHarga"
                    android:text="@string/harga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textSize="8pt"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginStart="10dp"
                    android:text="@string/tersedia"
                    android:id="@+id/tvTersedia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp" />
                <TextView
                    android:textColor="@color/colorPrimary"
                    android:textSize="7pt"
                    android:layout_margin="10dp"
                    android:text="@string/barang"
                    android:id="@+id/tvDeskripsi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
    <Button
        android:onClick="aksiPesan"
        android:id="@+id/btnAksiPesan"
        android:textSize="10pt"
        android:textColor="@color/whiteColor"
        android:textAllCaps="false"
        android:text="@string/aksi"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="45dp" />
</RelativeLayout>